--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <hr>
         <!--Start Background and mainpic-->
         <div class="bgabove">
-            <img class="background" src="IMG_0169.jpg" alt="Background">
-            <img class="mainpic" src="15392.jpg" alt="">
+            <img class="background" src="\images\IMG_0169.jpg" alt="Background">
+            <img class="mainpic" src="\images\15392.jpg" alt="">
         </div>
         <!--End Background and mainpic-->
         <!--Info-->
@@ -46,7 +46,7 @@
                 <hr>
             </div>
             <div class="botton">
-                <img class="bgbotton" src="IMG_0171.jpg" alt="">
+                <img class="bgbotton" src="\images\IMG_0171.jpg" alt="">
                 <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quam deleniti assumenda animi voluptates, quibusdam nesciunt error quo accusamus soluta optio enim incidunt expedita mollitia natus quas doloremque unde perspiciatis!</p>
             </div>
         </div>
