--- a/about.html
+++ b/about.html
@@ -1,1 +1,63 @@
-<!--Resume page-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fais Salaeh Personal page">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Fais Salaeh, About Fais Salaeh, About Fais Salaeh">
+    <meta name="author" content="Fais Salaeh">
+    <title>About</title>
+    
+    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.6.3/css/foundation.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.6.3/css/foundation-float.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
+</head>
+<body>
+    <!--Start header-->
+    <div class="header">
+        <nav>
+            <h1><a href="index.html" class="home">FAIS SALAEH</a></h1>
+           <!-- <img src="\images\IMG_20200901_111448.jpg" class="logo"> -->
+            <ul>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="#">MY WORK</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </nav>
+    </div>
+    <!--End header-->
+
+    <div class="background">
+        <img class="bg" src="/images/IMG_0170.jpg" alt="background">
+    </div>
+
+    <div class="detail">
+        <h1>ABOUT ME</h1>
+        <hr>
+        <div class="row">
+            <div class="small-6 columns">
+                <div class="work">
+                    <img src="#" alt="">
+                </div>
+            </div>
+            <div class="small-6 columns">
+                <div class="work">
+                    <img src="#" alt="">
+                </div>
+            </div>
+            <div class="small-6 columns">
+                <div class="work">
+                    <img src="#" alt="">
+                </div>
+            </div>
+            <div class="small-6 columns">
+                <div class="work">
+                    <img src="#" alt="">
+                </div>
+            </div>
+        </div>       
+    </div>
+</body>
+</html>
