--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <!--End header-->
 
     <div class="background">
-        <img class="bg" src="/images/IMG_0170.jpg" alt="background">
+        <img class="bg" src="IMG_0170.jpg" alt="background">
     </div>
 
     <div class="detail">
