--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
     <div class="detail">
         <h1>ABOUT ME</h1>
         <hr>
+        <h4> My Name : Fais Salaeh <br> Ages : 20 years old <br> </h4>
         <div class="row">
             <div class="small-6 columns">
                 <div class="work">
